app_deployment/frontend_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: frontend-depi-pod
  labels:
    app: frontend-depi
spec:
  containers:
  - name: frontend-depi-container
    image: sragzhran/frontend_depi_project:latest 
    ports:
    - containerPort: 80
    resources:
      limits:
        cpu: "1"
        memory: "512Mi"
      requests:
        cpu: "0.5"
        memory: "256Mi"
