app_deployment/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-depi-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"  # This annotation tells AWS to create an NLB
spec:
  type: LoadBalancer
  selector:
    app: frontend-depi
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
