app_deployment/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-depi-service
spec:
  type: NodePort
  selector:
    app: frontend-depi
  ports:
    - protocol: TCP
      port: 80        # The port your service will be accessible on inside the cluster
      targetPort: 80   # The port your container is listening on
      nodePort: 30008  # The port you can access from outside the cluster
#dh test 3mlo 3shan agrb locally msh for eks , will be deleted later
